CP Weekly, PyDev, v. numbers

--- a/_drafts/2020-06-30-draft.md
+++ b/_drafts/2020-06-30-draft.md
@@ -166,6 +166,10 @@ PySimpleGUI: The Simple Way to Create a GUI With Python - [Real Python](https://
 
 The only way to satisfy a programmer on their birthday! - [Reddit](https://www.reddit.com/r/Python/comments/hg9sk8/the_only_way_to_satisfy_a_programmer_on_his/).
 
+CircuitPython Weekly meeting for June 29th, 2020 [on YouTube](https://youtu.be/aD7vgFqawTY).
+
+PyDev of the Week: Florian Dahlitz on [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/06/29/pydev-of-the-week-florian-dahlitz/)
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/06/23/bluetooth-adafruit-discord-turns-3-and-more-python-adafruit-circuitpython-circuitpython-micropython-thepsf/)? [Building an Apple iBeacon with CircuitPython](http://www.movingelectrons.net/blog/2020/06/21/Building-an-Apple-iBeacon-with-CircuitPython.html).
 
 ## Coming soon
@@ -323,13 +327,13 @@ As for other events, with the COVID pandemic, most in-person events are postpone
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [5.3.0](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [5.4.0-beta.1](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2019####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20190629](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.12](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.8.3](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.9.0b3](https://www.python.org/download/pre-releases/).
 
 [1759 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
