--- a/_drafts/2020-07-07-draft.md
+++ b/_drafts/2020-07-07-draft.md
@@ -125,45 +125,61 @@ What is the team up to this week? Let’s check in!
 
 **Bryan**
 
-[![Bryan](../assets/20200707/bryan.jpg)](https://circuitpython.org/)
+Another week, more libraries, and new revision of the CAN FeatherWing. We decided to switch to using an older CAN controller at least for early iterations because the available libraries for it are more mature. Once we get a handle on things we will consider moving to a newer and likely faster chip. I also worked on a quick and relatively simple CircuitPython library for the BH1750 ambient light sensor from Rohm.
 
+Earlier in the week I worked on wrapping up the CircuitPython library for the PCF8591 ADC+DAC combo chip but ran into some strange behavior while testing before release. When I was reading the ADC for more than one channel, the results for the channel were getting switched around! To cut a long story slightly shorter, after verifying that my wiring was correct I dug into the datasheet to read about the timing of how the ADC reads are trigger and returned. As it turns out, an ADC reading is triggered on the rising/trailing edge of the ACK/NACK clock pulse. The _result_ for that measurement is returned in response to the _second_ read after the measurement is triggered.
 
+To understand why this caused me a headache, I'll briefly explain how reading from a sensor on an I2C bus generally works. This is a very simplified diagram and not to scale so bear with  me:
+
+Generally but not always, every I2C transaction between a microcontroller and a sensor on the bus starts with the address of the intended recipient
+
+With that implied, to read a register, the normal pattern from the perspective of the micro:
+
+[![Bryan](../assets/20200707/bryan1.jpg)](https://circuitpython.org/)
+
+In these cases, you're generally reading a register that already has the data available to send back, so after the mcu sends the address of the register it wants to read, it can immediately read the response back, even without giving up control of the bus.
+
+Since in this case we're talking to an ADC that starts taking a new measurement as soon as it's requested, this won't work because the data hasn't been generated and it takes a bit of time to do so. Rather than sitting around waiting for the measurement to finish the ADC kindly does two things at once: it starts measuring the requested channel, and while it's doing that it returns the result for the previous request. That ends up looking approximately like:
+
+[![Bryan](../assets/20200707/bryan2.jpg)](https://circuitpython.org/)
+
+This is explained in the datasheet of course, and it even includes this handy diagram:
+
+[![Bryan](../assets/20200707/bryan3.jpg)](https://circuitpython.org/)
+
+So, you can see why our reads were delayed. It was by design! Once we accounted for this in the libraries all was well, but it took some head scratching  to figure out. Let this serve as a reminder: The Datasheet Has All The Answers (except for when it doesn't and it's in the errata that you neglected to read).
 
 **Dan**
 
-[![Dan](../assets/20200707/dan.jpg)](https://circuitpython.org/)
+I'm continuing to work on an implementation of _bleio that supports the HCI Bluetooth protocol available on ESP32, used on our AirLift boards. I have "first light": I can talk to the ESP32 and ask it simple commands.
 
+I've also fixed a number of small bugs in various BLE libraries, and there are more still to fix.
 
-
-**Jeff**
-
-[![Jeff](../assets/20200707/jeff.jpg)](https://circuitpython.org/)
-
-
+We have decided to move our next CircuitPython alpha or beta release from 5.4.0 to 6.0.0, so that we can make some incompatible changes, which are allowed when we do a major version change. Watch for a new release soon!
 
 **Kattni**
 
-[![Kattni](../assets/20200707/kattni.jpg)](https://circuitpython.org/)
+I've been working on various guides this week. I updated the BNO055 guide to include the STEMMA QT version of the board. As this board is so popular, we will continue carrying the previous header-only version as well, so the guide update was simply integrating the STEMMA QT version. I finished updating the ST 9-DoF Combo Boards guide with the final FeatherWing. I started work on a guide to using the 74HC595 shift register. The guide will provide basic info about the chip including pinouts. It will also include an example of using it to control 8 LEDs using CircuitPython, with a detailed wiring diagram to help you get it going.
 
+We haven't had PyPI download stats available for some time as the site we were getting them from instituted rate limiting and we were well over the limit with the number of libraries we were querying. Thanks to sommersoft's research, we now have a way to roll our own query, though it has a few necessary prerequisites before we can get that going. We should have it up and have download stats available again soon.
 
+As well, thanks to sommersoft, I have the tools necessary to shift the CircuitPython libraries from using the default branch master on GitHub to using the default branch main. I am looking forward to updating all of the CircuitPython libraries to this change to welcoming and inclusive language. We have already shifted the CircuitPython core to main, and will be making the move across the rest of the project soon.
 
 **Lucian**
 
-[![Lucian](../assets/20200707/lucian.jpg)](https://circuitpython.org/)
-
-
+This past week I worked on creating a timer management system for STM32, which allows various different modules in the port to share a pool of timer peripherals. The system allows modules to prioritize certain kinds of timers based on whether they have pins exposed, aiming for the minimum number of conflicts possible between internal timer use (such as in modules like PulseOut or RGBMatrix) and external use (PWMOut). I also worked on some miscellaneous bugfixes to modules and peripherals affected by this new timer mediator, and fixed a crash related to simplex SPI on the STM32. 
 
 **Melissa**
 
 [![Melissa](../assets/20200707/melissa.jpg)](https://circuitpython.org/)
 
-
+This past week I ported the PyPortal library over to Blinka so that many of the PyPortal examples work with little modification. As I've ported over examples, I've found small bugs both in the PyPortal library and displayio for Blinka that I have been slowly fixing, which is leading to a more stable displayio for Raspberry Pi and other Single Board computers.
 
 **Scott**
 
-[![Scott](../assets/20200707/scott.jpg)](https://circuitpython.org/)
+This last week I've tested and debugged the busio implementation on ESP32-S2. My stream last week was me stumped by internal seemingly being crossed when doing SPI. Only after the stream did I realize there was another setting that was messing me up. Luckily, I sorted it out and got the PR. It's been reviewed and will be checked in shortly.
 
-
+This week, I'm starting to work on our network related libraries and brainstorming what the API should be from CircuitPython on the ESP32-S2. I'm also hoping to reduce the memory overhead of making json requests because they are very common. I may also add memory debugging/monitoring APIs to better track how many allocations occur and what size for a section of code.
 
 ## Upcoming events!
 
