last week's most popular

--- a/_drafts/2020-07-07-draft.md
+++ b/_drafts/2020-07-07-draft.md
@@ -54,7 +54,7 @@ Note: there may be a number of out of stock items as manufacturing gears back up
 
 Text
 
-**#ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://link)? [title](url).**
+#ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/06/30/the-python-on-microcontrollers-newsletter-adafruit-clue-nina-and-thea-and-much-more-python-adafruit-circuitpython-circuitpython-micropython-thepsf/)? [ADafruit CLUE Board](https://www.adafruit.com/product/4500).
 
 ## Made with Mu
 
