Add versions and meeting links

--- a/_drafts/2020-07-07-draft.md
+++ b/_drafts/2020-07-07-draft.md
@@ -198,6 +198,10 @@ JSON explained for Python users: Data Science Edition - [Towards Data Science](h
 
 Guess the song that the Python "program" above refers to.
 
+PyDev of the Week: Philip James on [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/07/06/pydev-of-the-week-philip-james/)
+
+CircuitPython Weekly Meeting for July 6th, 2020 ([notes](https://github.com/adafruit/adafruit-circuitpython-weekly-meeting/blob/master/2020/2020-07-06.md)) [on YouTube](https://youtu.be/fh91P9NBPvg) and [on diode.zone](https://diode.zone/videos/watch/36cad613-2f72-4ce1-a165-9dcb8197621e).
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/06/30/the-python-on-microcontrollers-newsletter-adafruit-clue-nina-and-thea-and-much-more-python-adafruit-circuitpython-circuitpython-micropython-thepsf/)? [Adafruit CLUE Board](https://www.adafruit.com/product/4500).
 
 ## Made with Mu
@@ -365,13 +369,13 @@ As for other events, with the COVID pandemic, most in-person events are postpone
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [5.3.0](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [6.0.0-alpha.1](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2019####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20200704](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.12](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.8.3](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.9.0b4](https://www.python.org/download/pre-releases/).
 
 [1763 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
