New/updated libs/guides, stars.

--- a/_drafts/2020-07-14-draft.md
+++ b/_drafts/2020-07-14-draft.md
@@ -5,7 +5,7 @@ date: 2020-06-09 07:00:00 -0800
 categories: weekly
 ---
 
-- [ ] Kattni updates
+- [X] Kattni updates
 - [ ] change date
 - [ ] update title
 - [ ] Feature story
@@ -83,11 +83,19 @@ Looking for adding a new board to CircuitPython? It's highly encouraged! Adafrui
 
 [![title](../assets/20200mdd/20200mddlearn.jpg)](https://learn.adafruit.com/)
 
-[title](url) from [name](url)
+[PyPortal Roku Remote](https://learn.adafruit.com/pyportal-roku-remote) from [Dylan Herrada](https://learn.adafruit.com/users/dherrada)
 
-## Updated Learn Guides!
+[PyPortal US Election Calendar](https://learn.adafruit.com/pyportal-electioncal-us) from [Àlvaro Figueroa](https://learn.adafruit.com/users/fede2)
 
-[title](url) from [name](url)
+[LED Matrix Hourglass](https://learn.adafruit.com/led-matrix-hourglass) from [Noe and Pedro](https://learn.adafruit.com/users/pixil3d)
+
+[Lucio Blaster 2020 - CircuitPython for Advanced Prop Making](https://learn.adafruit.com/lucio-blaster-2020-circuitpython-advanced-prop-making) from [John Park](https://learn.adafruit.com/users/johnpark)
+
+[LED Bullwhip with Motion & Sound Reactivity](https://learn.adafruit.com/led-bullwhip) from [Erin St. Blaine](https://learn.adafruit.com/users/firepixie)
+
+[Running PyPortal Code on Blinka with Displayio](https://learn.adafruit.com/running-pyportal-code-on-blinka-with-displayio) from [Melissa LeBlanc-Williams](https://learn.adafruit.com/users/MakerMelissa)
+
+[Adafruit DS1841 I2C Logarithmic Resistor](https://learn.adafruit.com/adafruit-ds1841-i2c-logarithmic-resistor) from [Bryan Siepert](https://learn.adafruit.com/users/siddacious)
 
 ## CircuitPython Libraries!
 
@@ -101,19 +109,11 @@ If you'd like to contribute, CircuitPython libraries are a great place to start.
 
 You can check out this [list of all the Adafruit CircuitPython libraries and drivers available](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/blob/master/circuitpython_library_list.md). 
 
-The current number of CircuitPython libraries is **###**!
-
-**New Libraries!**
-
-Here's this week's new CircuitPython libraries:
-
-* [library](url)
+The current number of CircuitPython libraries is **262**!
 
 **Updated Libraries!**
 
-Here's this week's updated CircuitPython libraries:
-
-* [library](url)
+We updated nearly all our libraries this week! Most of it was a simple change to the README. For a list of this week's updated libraries, check out the [CircuitPython Library Report](https://adafruit-circuit-python.s3.amazonaws.com/adabot/bin/reports/circuitpython_library_report_20200710.txt).
 
 **PyPI Download Stats!**
 
@@ -197,7 +197,7 @@ CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpyt
 
 [#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
 
-[### Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
+[1767 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
 ## Call for help -- Translating CircuitPython is now easier than ever!
 
