--- a/_drafts/2020-07-14-draft.md
+++ b/_drafts/2020-07-14-draft.md
@@ -144,6 +144,10 @@ Python and Go:  Extending Python With Go - [Ardan Labs](https://www.ardanlabs.co
 
 BlurDetection2 - Blur Detection with OpenCV in Python - [GitHub](https://github.com/WillBrennan/BlurDetection2)
 
+PyDev of the week: Dr. David Pena on [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/07/13/pydev-of-the-week-dr-david-pena/)
+
+CircuitPython Weekly Meeting for July 13, 2020 ([notes](https://github.com/adafruit/adafruit-circuitpython-weekly-meeting/blob/master/2020/2020-07-13.md)) on [YouTube](https://youtu.be/sbDt0nD5eaI).
+
 **#ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://link)? [title](url).**
 
 ## Made with Mu
@@ -287,13 +291,13 @@ As for other events, with the COVID pandemic, most in-person events are postpone
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [5.3.0](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [6.0.0-alpha.1](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2019####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20200711](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.12](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.8.1](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.9.0b4](https://www.python.org/download/pre-releases/).
 
 [1767 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
