Updated wording on LED Sign article

--- a/_drafts/2020-07-14-draft.md
+++ b/_drafts/2020-07-14-draft.md
@@ -66,7 +66,7 @@ The Python Software Foundation is accepting nominations for their second quarter
 
 [![Animated LED Sign](../assets/20200714/20200714sign.jpg)](https://www.youtube.com/watch?v=iUOKnKkuhis&feature=youtu.be)
 
-Melissa demonstrates Part 1 of her Custom Animated RGB LED Scrolling Message Sign Series, covering the assembly of the sign and everything you need to do to build the hardware - [YouTube](https://www.youtube.com/watch?v=iUOKnKkuhis&feature=youtu.be). 
+Melissa demonstrates Part 1 of her Python-Powered Custom Animated LED Sign Series, covering the assembly of the sign and everything you need to do to 3D Print and build the hardware - [YouTube](https://www.youtube.com/watch?v=iUOKnKkuhis&feature=youtu.be). 
 
 ## TalkPython Podcast: Device Simulator Express
 
