--- a/_drafts/2020-07-21-draft.md
+++ b/_drafts/2020-07-21-draft.md
@@ -66,7 +66,7 @@ You can see the latest video and past videos on the Adafruit YouTube channel und
 
 [![Real Time Clocks](../assets/20200721/20200721rtc1.jpg)](https://emergent.unpythonic.net/01594912346)
 
-Jeff Epler has done a deep-dive into using the [PCF8523](https://www.adafruit.com/product/2922) and [DS3231](https://www.adafruit.com/product/3028) real-time clock circuits, which Adafruit sells in Feather form factor boards. Sample code is provided to detect which of these two boards may be connected to a CircuitPython host as they both use the same I2C addess but different register layouts - [Blog](https://emergent.unpythonic.net/01594912346).
+Jeff Epler has done a deep-dive into using the [PCF8523](https://www.adafruit.com/product/2922) and [DS3231](https://www.adafruit.com/product/3028) real-time clock circuits, which Adafruit sells in Feather form factor boards. Sample code is provided to detect which of these two boards may be connected to a CircuitPython host as they both use the same I2C address, but different register layouts - [Blog](https://emergent.unpythonic.net/01594912346).
 
 [![Real Time Clocks](../assets/20200721/20200721rtc2.jpg)](https://emergent.unpythonic.net/01594923755)
 
