--- a/_drafts/2020-07-21-draft.md
+++ b/_drafts/2020-07-21-draft.md
@@ -174,6 +174,12 @@ Python Generators 101 - a video course on Python generators and the Python yield
 
 Women Who Code - [Twitter](https://twitter.com/WomenWhoCode/status/1284187115950092289).
 
+@ktemkin is a guest on embedded.fm podcast to talk about USB. She suggests [TinyUSB](https://github.com/hathach/tinyusb) as a good stack to start with because it's known to work well because it powers CircuitPython. [Listen on embedded.fm](https://embedded.fm/episodes/337)
+
+PyDev of the Week: Jim Crist-Harif [from Mouse vs Python](https://www.blog.pythonlibrary.org/2020/07/20/pydev-of-the-week-jim-crist-harif/)
+
+CircuitPython Weekly for July 20th, 2020 [notes](https://github.com/adafruit/adafruit-circuitpython-weekly-meeting/blob/master/2020/2020-07-20.md) video [on YouTube](https://youtu.be/PDYe0vdqU-c) and [on diode.zone](https://diode.zone/videos/watch/389cc9e6-c557-484c-9e75-b4902ed3d1d7)
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/07/14/python-on-microcontrollers-newsletter-summer-of-making-circuitpython-day-announced-and-more-python-adafruit-circuitpython-circuitpython-micropython-thepsf/)? [A Wireless and USB-C Keyboard Powered by CircuitPython](https://makerdiary.com/pages/m60-mechanical-keyboard).
 
 ## Coming Soon: CircuitPython Day
@@ -337,13 +343,13 @@ As for other events, with the COVID pandemic, most in-person events are postpone
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [5.3.1](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [6.0.0-alpha.1](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2019####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20200718](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.12](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.8.5](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.9.0b5](https://www.python.org/download/pre-releases/).
 
 [1777 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
