Update and rename 2020-08-03-draft.md to 2020-08-04-draft.md

--- a/_drafts/2020-08-04-draft.md
+++ b/_drafts/2020-08-04-draft.md
@@ -155,9 +155,13 @@ What is the team up to this week? Let’s check in!
 
 **Lucian**
 
-[![Lucian](../assets/20200mdd/lucian.jpg)](https://circuitpython.org/)
+[![Lucian](../assets/20200804/20200804lucian.jpg)](https://circuitpython.org/)
 
+This past week I worked on implementing the Neopixel and the PulseIn/PulseOut module combo on ESP32-S2, diving into the RMT (remote control) peripheral. Espressif has a funny habit of naming their peripherals in a way that makes them sound kind of limited, when the truth is just the opposite - just as the "LED Controller" is actually an extremely flexible and general purpose PWM controller that is also suitable for servos and tones, the "Remote Control" peripheral is capable of far more than just IR pulse trains (such as emulating the Neopixel protocol). I'm currently considering whether I should implement a port-level mediator system for the RMT, since it's possible we may also want to use it for things like RotaryIO, in which case it'd be good to have a similar channel-negotiator system like the one I implemented on the STM32.
 
+Over the weekend, I also took some time to play with the Open Book Featherwing from Oddly Specific Objects. I've always enjoyed playing with language learning software/hardware and saw an opportunity to do something along those lines on the Open Book, which is a compact e-paper ereader that runs on Circuitpython via the Feather M4 Express (or presumably other feathers, I haven't checked yet). The really cool thing about the Open Book is that it has a NOR flash chip called Babel that is entirely dedicated to unicode character support - this is useful since good international embedded fonts are kind of hard to find and have a hard time fitting on the Feather 2MB NOR flash alongside Circuitpython.
+
+Shown below is my flash card app, which assembles random Japanese sentences from a json file full of "cards" and "words", allowing you to make many variations of a particular sentence type. For instance, if you'd like to study conjugated verbs, you can design a card that will create many different sentences that focus on this topic but use different words and structures for variation. I'm hoping to expand on it to include tags and SRS features - it's been really cool how easy it was to move a python app designed on a PC over to Circuitpython! 
 
 **Melissa**
 
