New/updated guides/libs, stars, etc.

--- a/_drafts/2020-08-04-draft.md
+++ b/_drafts/2020-08-04-draft.md
@@ -5,7 +5,7 @@ date: 2020-08-04 07:00:00 -0800
 categories: weekly
 ---
 
-- [ ] Kattni updates
+- [X] Kattni updates
 - [ ] change date
 - [ ] update title
 - [ ] Feature story
@@ -85,11 +85,15 @@ Looking for adding a new board to CircuitPython? It's highly encouraged! Adafrui
 
 [![title](../assets/20200804/20200804learn.jpg)](https://learn.adafruit.com/)
 
-[title](url) from [name](url)
+[CLUE Altimeter](https://learn.adafruit.com/clue-altimeter) from [Carter Nelson](https://learn.adafruit.com/users/caternuson)
 
-## Updated Learn Guides!
+[CircuitPython Sin Complicaciones para la Circuit Playground Express y la Bluefruit](https://learn.adafruit.com/circuitpython-sin-complicaciones-para-la-circuit-playground-express) from [Álvaro Figueroa](https://learn.adafruit.com/users/fede2)
 
-[title](url) from [name](url)
+[Mini VOTE Keyboard](https://learn.adafruit.com/vote-keyboard) from [Collin Cunningham](https://learn.adafruit.com/users/collinmel)
+
+[NeoPixel Run LED Arcade Game](https://learn.adafruit.com/pixel-chase-game) from [Noe and Pedro](https://learn.adafruit.com/users/pixil3d)
+
+[Adafruit MicroSD SPI or SDIO Card Breakout Board](https://learn.adafruit.com/adafruit-microsd-spi-sdio) from [Jeff Epler](https://learn.adafruit.com/users/jepler)
 
 ## CircuitPython Libraries!
 
@@ -103,19 +107,17 @@ If you'd like to contribute, CircuitPython libraries are a great place to start.
 
 You can check out this [list of all the Adafruit CircuitPython libraries and drivers available](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/blob/master/circuitpython_library_list.md). 
 
-The current number of CircuitPython libraries is **###**!
-
-**New Libraries!**
-
-Here's this week's new CircuitPython libraries:
-
-* [library](url)
+The current number of CircuitPython libraries is **263**!
 
 **Updated Libraries!**
 
 Here's this week's updated CircuitPython libraries:
 
-* [library](url)
+ * [Adafruit_CircuitPython_Display_Text](https://github.com/adafruit/Adafruit_CircuitPython_Display_Text)
+ * [Adafruit_CircuitPython_SGP30](https://github.com/adafruit/Adafruit_CircuitPython_SGP30)
+ * [Adafruit_CircuitPython_BusDevice](https://github.com/adafruit/Adafruit_CircuitPython_BusDevice)
+ * [Adafruit_CircuitPython_RGB_Display](https://github.com/adafruit/Adafruit_CircuitPython_RGB_Display)
+ * [Adafruit_CircuitPython_MiniMQTT](https://github.com/adafruit/Adafruit_CircuitPython_MiniMQTT)
 
 **PyPI Download Stats!**
 
@@ -225,7 +227,7 @@ CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpyt
 
 [#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
 
-[### Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
+[1787 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
 ## Call for help -- Translating CircuitPython is now easier than ever!
 
