Add 8/3 meeting and versions

--- a/_drafts/2020-08-04-draft.md
+++ b/_drafts/2020-08-04-draft.md
@@ -150,6 +150,10 @@ How many years of experience do you have as a developer, a breakdown - [Women Wh
 
 Work vs. automation, the meme - [Twitter](https://twitter.com/mytrashcode/status/1290014520425902083).
 
+PyDev of the Week: Carlton Gibson on [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/07/27/pydev-of-the-week-carlton-gibson/)
+
+CircuitPython Weekly for August 3rd, 2020 [notes](https://github.com/adafruit/adafruit-circuitpython-weekly-meeting/blob/master/2020/2020-08-03.md) [on YouTube](https://youtu.be/dt1AeMOm8ec)
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/07/28/python-on-microcontrollers-newsletter-ieee-rates-python-number-1-discord-23k-and-more-python-adafruit-circuitpython-circuitpython-micropython-thepsf/)? [IEEE ranks Python #1 Programming Language](https://spectrum.ieee.org/at-work/tech-careers/top-programming-language-2020).
 
 ## New Boards Supported by CircuitPython
@@ -158,8 +162,8 @@ The number of supported microcontrollers and Single Board Computers (SBC) grows 
 
 This week we had 4 new boards added!
 
-- [https://circuitpython.org/board/makerdiary_m60_keyboard/](https://circuitpython.org/board/makerdiary_m60_keyboard/)
-- [nRF52840 M.2 Developer Kit](https://circuitpython.org/board/makerdiary_nrf52840_m2_devkit/)
+- [MakerDiary M60 Keyboard](https://circuitpython.org/board/makerdiary_m60_keyboard/)
+- [MakerDiary nRF52840 M.2 Developer Kit](https://circuitpython.org/board/makerdiary_nrf52840_m2_devkit/)
 - [MDBT50Q-DB-40](https://circuitpython.org/board/raytac_mdbt50q-db-40/)
 - [ScoutMakes Azul](https://circuitpython.org/board/tinkeringtech_scoutmakes_azul/)
 
@@ -312,13 +316,13 @@ As for other events, with the COVID pandemic, most in-person events are postpone
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [5.3.1](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [6.0.0-alpha.2](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2019####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20200801](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[1.12](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.8.5](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.9.0b5](https://www.python.org/download/pre-releases/).
 
 [1787 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
